2003-02-06  Peter Stephenson  <pws@csr.com>

	* 18202: Functions/TCP/*, Doc/Makefile.in, Doc/zsh.yo,
	Doc/zshtcpsys.yo, Doc/Zsh/manual.yo, Doc/Zsh/modules.yo,
	Doc/zsh/tcpsys.yo, Doc/Zsh/zftpsys.yo, Src/Modules/tcp.c,
	Src/Modules/tcp.mdd:  New set of TCP functions tcp_* which
	run on top of ztcp, documented in zshtcpsys manual.  Also
	sneaked in more informative error message in zsh/net/tcp
	for failure to bind to a port.

	* Greg Klanderman <gak@klanderman.net>: 18191:
	Src/Zle/compresult.c: `compctl -y' didn't obey the listpacked
	and listrowsfirst options.

2003-02-05  Peter Stephenson  <pws@csr.com>

	* 18195: Doc/Zsh/builtins.yo Src/builtin.c Src/utils.c
	Src/Modules/zpty.c: Timeouts with `read' via optional numeric
	argument to -t option.

2003-02-04  Peter Stephenson  <pws@csr.com>

	* unposted: 4.1.0-dev-7.

	* 18188: Src/text.c: make output case statements use balanced
	parentheses.

2003-02-03  Peter Stephenson  <pws@csr.com>

	* 18175: Completion/Unix/Command/_p4: Completion for Perforce.

	* 18174: Doc/Zsh/contrib.yo, Functions/Zle/read-from-minibuffer,
	Functions/Zle/replace-string:  New widgets for reading values
	during editing and for performing string and pattern replacements.

2003-01-30  Clint Adams  <clint@zsh.org>

	* unposted: config.guess, config.sub: update to 2003-01-10 and
	2003-01-03 versions, respectively.

	* 18131: zshconfig.ac: find pcre on RedHat.

2003-01-30  Oliver Kiddle  <opk@zsh.org>

	* Doug Kearns: 18159: Completion/Unix/Command/_tidy:
	completion function for HTML Tidy

2003-01-29  Oliver Kiddle  <opk@zsh.org>

	* 18156: Completion/Unix/Type/_email_addresses, Doc/Zsh/compsys.yo:
	use more conventional reply array for plugins, document new styles
	used in _email_addresses and document bashcompinit

	* 18149, 18153: Completion/bashcompinit: new function for
	emulating bash's programmable completion system

2003-01-27  Bart Schaefer  <schaefer@zsh.org>

	* 18144: Src/init.c: no SIGHUP handler if parent was ignoring